@@ -1,3 +1,8 @@
+2007-10-23  Sven Schuetz <sven@de.ibm.com>
+
+	* indCIMXMLHandler.c, internalProvider.c, internalProvider.h:
+	Fixed 1817878: sfcb might not load indication providers at startup
+
 2007-10-16  Sven Schuetz <sven@de.ibm.com>
 
 	* cimXmlGen.c:
